fix bottom clipping after resize

--- a/src/App.css
+++ b/src/App.css
@@ -547,7 +547,6 @@ a.text-link {
   background-color: white;
   color: #111;
   padding: 75px 10px 153px 50px /* padding-bottom must cover the footer (logged out: 79px, logged in: 93px) plus some additional visual spacing */;
-  position: relative;
   transition: transform 0 ease-out, margin 0 ease-out; /* add transition time after initial load and scroll into place */
   overflow: hidden; /* prevent expanded click areas from adding scroll-x */
   box-sizing: border-box; /* make height include padding so that the min-height can be exctly 100vh */
